--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "node-poc",
   "version": "1.0.0",
   "description": "",
-  "main": "mongoRepository.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.0.48"
+    "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
+    "express": "^4.13.3",
+    "mongodb": "^2.0.48",
+    "multer": "^1.1.0"
   }
 }
